--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "girls-reptile",
   "productName": "girls-reptile",
-  "version": "1.0",
+  "version": "1.0.0",
   "author": "licoy",
   "description": "girls",
   "license": null,
@@ -18,7 +18,8 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": ""
+    "postinstall": "",
+    "release": "node .electron-vue/build.js && electron-builder"
   },
   "dependencies": {
     "axios": "^0.18.0",
