--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 - curl -o- -L https://yarnpkg.com/install.sh | bash
 - source ~/.bashrc
 - npm install -g xvfb-maybe
-- yarn
+- yarn install
 script:
 - npm run release
 - yarn run build:docs
