--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,12 @@
+# Commented sections below can be used to run tests on the CI server
+# https://simulatedgreg.gitbooks.io/electron-vue/content/en/testing.html#on-the-subject-of-ci-testing
+version: 0.1.{build}
+
+branches:
+  only:
+    - master
+
+image: Visual Studio 2017
 platform:
   - x64
 
@@ -5,16 +14,18 @@ cache:
   - node_modules
   - '%APPDATA%\npm-cache'
   - '%USERPROFILE%\.electron'
+  - '%USERPROFILE%\AppData\Local\Yarn\cache'
+
+init:
+  - git config --global core.autocrlf input
 
 install:
   - ps: Install-Product node 8 x64
+  - git reset --hard HEAD
   - npm install
+  - node --version
 
 build_script:
-  - npm run dist
+  - npm run release
 
 test: off
-
-branches:
-  only:
-    - master
