--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,14 +2,7 @@
 # https://simulatedgreg.gitbooks.io/electron-vue/content/en/testing.html#on-the-subject-of-ci-testing
 version: 0.1.{build}
 
-branches:
-  only:
-    - master
-
-provider: Environment
-  name: production
-  on:
-    APPVEYOR_REPO_TAG: false
+skip_non_tags: true
 
 image: Visual Studio 2017
 platform:
